--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -377,9 +377,10 @@
     padding: 10rem 40rem 2rem 0;
   }
 
-  /* Section Latest news ============================= */
+  /* Section Latest news 
+  ============================= */
 
-  .row .section-latest-news{
+  .section-latest-news .row {
     flex-direction: row-reverse;
   }
   
