--- a/flexbox/3-styles.css
+++ b/flexbox/3-styles.css
@@ -383,8 +383,9 @@
     flex-direction: row-reverse;
   }
 
-  /* Section SERVICES ============================= */
-
+  /* Section SERVICES 
+  ============================= */
+  
   .section-services .row{
     flex-wrap: wrap;
   }
