--- a/flexbox/4-styles.css
+++ b/flexbox/4-styles.css
@@ -180,33 +180,27 @@
   /* Grid
       ============================= */
   
-  ul.row {
-    margin: -1rem;
-    padding: 0;
-    list-style: none;
-  }
-  .row{
-    display: flex;
-  }
-  
-  .row::after {
-    content: '';
-    display: table;
-    clear: both;
-  }
-  
-  [class*='col-'] {
-    float: left;
-    margin: 1rem;
-  }
-  
-  .col-1-3 {
-    calc((100% / 3) - 2rem)
-  }
-  
-  .col-1-2 {
-    calc((100% / 2) - 2rem)
-  }
+      ul.row {
+        margin: -1rem;
+        padding: 0;
+        list-style: none;
+      }
+      
+      .row {
+        display: flex;
+      }
+      
+      [class*="col-"] {
+        margin: 1rem;
+      }
+      
+      .col-1-3 {
+        width: calc((100% / 3) - 2rem);
+      }
+      
+      .col-1-2 {
+        width: calc((100% / 2) - 2rem);
+      }      
   
   /* Navbar
       ============================= */
